--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "core-js": "^3.6.5",
+    "json-server": "^1.0.0-alpha.23",
     "vue": "^3.0.0",
     "vue-router": "^4.2.5",
     "vuex": "^4.1.0"
