--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "axios": "^1.6.7",
     "core-js": "^3.6.5",
     "json-server": "^1.0.0-alpha.23",
     "vue": "^3.0.0",
